# budget_keeper

./: .dockerignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  env.example  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: main.yaml
alembic/versions/: 01_initial_migrations.py  ffac1b7e140b_initial_migrations.py
api/: main.py
api/core/: __init__.py
api/db/: models.py
api/endpoints/: __init__.py  auth.py  categories.py  currency.py  index.py  records.py  users.py
api/routers/: categories.py  records.py  users.py
api/schemas/: category_schemas.py  currency_schemas.py  user_schemas.py
api/services/: base_service.py
api/utils/: dependencies.py
bot/: client.py  main.py  middleware.py  util.py
bot/handlers/: categories.py  records.py  reports.py  start.py  tear_down.py
bot/keyboards/: bot_utils.py  categories.py  helpers.py  main_menu.py  reports.py
bot/keyboards/inline/: currency.py
tests/: conftest.py  test_categories.py  test_currency.py  test_users.py
