[project]
name = "budget_keeper_bot"
dynamic = ["version"]

requires-python = ">=3.12"
authors = {name = "Ramil Shafikov", email = "shirawycc@yandex.ru"}

description = "Telegram Bot to handle your expences"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "module"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."MESSAGES CONTROL"]
disable = "C0111,W0707,R0903,E1136,E1102,W0613,W0621,W0718,R0801"
max-args = 7
